# cargo-trend

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: regression.yml  rust.yml  samples.yml  test.yml  update.yml
db/: db.gz.sha256
db_v2/: db.gz.sha256
db_v3/: db.json  db10  db11  db12  db13  db14  db15  db16  db17  db18  db19  db20  db21  db22  db23  db24  db9
src/: db.rs  main.rs  plotter.rs  update_db.rs
