[package]
name = "cargo-trend"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/cargo-trend"
keywords = ["cargo", "subcommand"]
categories = ["development-tools", "development-tools::cargo-plugins"]
license = "MIT"
readme = "README.md"
description = "Cargo subcommand to generate trend graph of dependent crates"
edition = "2018"
exclude = ["db/*", "samples/*"]

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""

[dependencies]
cargo_metadata = "0.8"
chrono         = {version = "0.4", features = ["serde"]}
crates-index   = "0.13"
flate2         = "1.0"
git2           = "0.10"
failure        = "0.1"
plotters       = "0.2"
random_color   = "0.4"
reqwest        = "0.9"
serde          = {version = "1.0", features = ["derive"]}
serde_json     = "1.0"
sha2           = "0.8"
structopt      = "0.3"
tempfile       = "3.1"
xdg            = "2.2"
