[package]
name = "cargo-trend"
version = "0.3.1-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/cargo-trend"
keywords = ["cargo", "subcommand"]
categories = ["development-tools", "development-tools::cargo-plugins"]
license = "MIT"
readme = "README.md"
description = "Cargo subcommand to generate trend graph of dependent crates"
edition = "2018"
exclude = ["db/*", "db_v2/*", "samples/*"]

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/cargo-trend/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[dependencies]
anyhow         = "1"
cargo_metadata = "0.13"
chrono         = {version = "0.4", features = ["serde"]}
crates-index   = "0.16"
directories    = "3"
flate2         = "1"
git2           = "0.13"
plotters       = "0.3"
random_color   = "0.5"
semver         = "1.0.2"
serde          = {version = "1", features = ["derive"]}
serde_json     = "1"
sha2           = "0.9"
structopt      = "0.3"
tempfile       = "3.2"

[dependencies.reqwest]
version  = "0.11"
features = ["blocking"]
